<resources>
    <string name="app_name">RealWhatsappClone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_phone">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remind_my_password">Remind my password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="email">Email</string>
    <string name="register">Registration</string>
    <string name="registration">Registration</string>
    <string name="phone">Phone number</string>
    <string name="name">Name</string>
    <string name="submit">submit</string>
    <string name="logout">Logout</string>
    <string name="photo">photo</string>
    <string name="next">next</string>
    <string name="call">Call</string>
    <string name="message_text">Message...</string>
    <string name="there_is_no_internet_connetion">There is no internet connection</string>
    <string name="invalid_token">Please relogin</string>
    <string name="there_is_no_more_data">There is no more data</string>
    <string name="there_is_no_dialogs_anymore">There is no dialogs anymore</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_wait">Please,wait...</string>
    <string name="error">Error</string>
    <string name="there_is_no_data_anymore">There is no data anymore</string>
    <string-array name="text_button">
        <item>Login</item>
        <item>Registration</item>
        <item>Remind password</item>
    </string-array>
    <string-array name="months">
        <item>january</item>
        <item>february</item>
        <item>march</item>
        <item>april</item>
        <item>may</item>
        <item>june</item>
        <item>july</item>
        <item>august</item>
        <item>september</item>
        <item>october</item>
        <item>november</item>
        <item>december</item>
    </string-array>

</resources>
